--- a/app/sass/abstracts/_variables.sass
+++ b/app/sass/abstracts/_variables.sass
@@ -1,2 +1,5 @@
-$color-red: #ff0000
-$color-green: #49eb34
+$font-main: 'Gotham Pro', 'Arial', sans-serif
+$color-green: #01c722
+$color-orange: #fd6327
+$color-blue: #1879e6
+$color-pink: #ff1a9b
