--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,10 +4,19 @@
 @import 'base/_fonts'
 @import 'base/_base'
 
-@import 'layout/_section-first'
-@import 'layout/_section-second'
+@import 'layout/_header'
+@import 'layout/_franchise'
+@import 'layout/_trade'
+@import 'layout/_advantage'
+@import 'layout/_city'
+@import 'layout/_get'
+@import 'layout/_report'
+@import 'layout/_chat'
+@import 'layout/_numbers'
+@import 'layout/_places'
+@import 'layout/_agreement'
 
-@import 'components/_button'
+@import 'components/_btn'
 
 
 
