--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -1,18 +1,36 @@
+html 
+  box-sizing: border-box
+
+*, *:before, *:after 
+  box-sizing: inherit
+
 body 
   min-width: 320px
-  font-family: "Arial", sans-serif
+  font-family: $font-main
   font-size: 18px
-  line-height: 1.2
+  line-height: 1.4
+  letter-spacing: 0.02em
+  font-weight: 400
+  color: #fff
 
-.row 
-  display: flex
-  flex-wrap: wrap
-  margin: 0 -15px
+h2 
+  font-size: 45px
+  line-height: 1.3
+  font-weight: 800
+  text-transform: uppercase
+
+h3
+  font-size: 40px
+  line-height: 1.37
+  font-weight: 800
+  text-transform: uppercase
   
+
 .container
-  max-width: 1200px
+  // outline: 1px solid green
+  max-width: 1280px
   margin: 0 auto
-  padding: 0 15px
+  padding: 0 20px
   +media-lg
     max-width: 960px
   +media-md
