--- a/app/sass/base/_fonts.sass
+++ b/app/sass/base/_fonts.sass
@@ -1,11 +1,42 @@
 @font-face 
 	font-family: 'Gotham Pro'
+	src: url('../fonts/GothamPro-Light.eot')
+	src: url('../fonts/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/GothamPro-Light.woff') format('woff'),
+	url('../fonts/GothamPro-Light.ttf') format('truetype')
+	font-weight: 200
+	font-style: normal
+	font-display: swap
+
+@font-face 
+	font-family: 'Gotham Pro'
 	src: url('../fonts/GothamPro.eot')
 	src: url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
 	url('../fonts/GothamPro.woff') format('woff'),
 	url('../fonts/GothamPro.ttf') format('truetype')
 	font-weight: 400
 	font-style: normal
+	font-display: swap
+
+@font-face 
+	font-family: 'Gotham Pro'
+	src: url('../fonts/GothamPro-Medium.eot')
+	src: url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/GothamPro-Medium.woff') format('woff'),
+	url('../fonts/GothamPro-Medium.ttf') format('truetype')
+	font-weight: 500
+	font-style: normal
+	font-display: swap
+
+@font-face 
+	font-family: 'Gotham Pro'
+	src: url('../fonts/GothamPro-Bold.eot')
+	src: url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/GothamPro-Bold.woff') format('woff'),
+	url('../fonts/GothamPro-Bold.ttf') format('truetype')
+	font-weight: 700
+	font-style: normal
+	font-display: swap
 
 @font-face 
 	font-family: 'Gotham Pro'
@@ -13,14 +44,18 @@
 	src: url('../fonts/GothamPro-Black.eot?#iefix') format('embedded-opentype'),
 	url('../fonts/GothamPro-Black.woff') format('woff'),
 	url('../fonts/GothamPro-Black.ttf') format('truetype')
-	font-weight: 900
+	font-weight: 800
 	font-style: normal
+	font-display: swap
+
+// -------------------------------------------------------
 
 @font-face 
-	font-family: 'Gotham Pro'
-	src: url('../fonts/GothamPro-Italic.eot')
-	src: url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/GothamPro-Italic.woff') format('woff'),
-	url('../fonts/GothamPro-Italic.ttf') format('truetype')
-	font-weight: 400
-	font-style: italic
+	font-family: 'FuturaPT'
+	src: url('../fonts/FuturaPT-Bold.eot')
+	src: url('../fonts/FuturaPT-Bold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/FuturaPT-Bold.woff') format('woff'),
+	url('../fonts/FuturaPT-Bold.ttf') format('truetype')
+	font-weight: 700
+	font-style: normal
+	font-display: swap
