--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,10 @@
 @import 'layout/_numbers'
 @import 'layout/_places'
 @import 'layout/_agreement'
+@import 'layout/_moment'
+@import 'layout/_photo'
+@import 'layout/_feedback'
+@import 'layout/_footer'
 
 @import 'components/_btn'
 
