--- a/app/sass/layout/_agreement.sass
+++ b/app/sass/layout/_agreement.sass
@@ -2,7 +2,7 @@
   position: relative
   padding-top: 233px
   padding-bottom: 170px
-  background: #000 url('../../img/agreement-bg.png') no-repeat right top 130px
+  background: #000 url('../img/agreement-bg.png') no-repeat right top 130px
   &::after  
     content: ''
     position: absolute
@@ -35,3 +35,4 @@ h3.agreement__title
 
 .agreement__btn.btn 
   padding: 13px 41px
+
