--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -1,7 +1,7 @@
 .header 
   padding-top: 140px
   padding-bottom: 120px
-  background: url('../../img/header-bg-gamepad.png') no-repeat top 470px left 0, url('../../img/header-bg-hookah.png') no-repeat top 130px right 0, url('../img/header-bg.jpg') no-repeat center 
+  background: url('../img/header-bg-gamepad.png') no-repeat top 470px left 0, url('../img/header-bg-hookah.png') no-repeat top 130px right 0, url('../img/header-bg.jpg') no-repeat center 
   background-size: auto, auto, cover
   &::before 
     display: none
