--- a/app/sass/layout/_feedback.sass
+++ b/app/sass/layout/_feedback.sass
@@ -1,7 +1,7 @@
 .feedback
   padding-top: 230px
   padding-bottom: 200px
-  background: red url('../../img/feedback-bg.jpg') no-repeat center
+  background: red url('../img/feedback-bg.jpg') no-repeat center
   background-size: cover
 
 h3.feedback__title 
@@ -14,4 +14,4 @@ h3.feedback__title
   text-align: center
 
 .feedback__btn.btn 
-  padding: 13px 79px
+  padding: 13px 79px 
