--- a/app/sass/layout/_photo.sass
+++ b/app/sass/layout/_photo.sass
@@ -10,4 +10,12 @@
 
 .photo__slider-wrap
   height: 565px
-  background-color: red
+
+.photo__slider-item 
+  display: block
+
+.swiper-button__container
+  position: relative
+
+.swiper-slide 
+  width: auto
