--- a/app/sass/layout/_report.sass
+++ b/app/sass/layout/_report.sass
@@ -6,12 +6,18 @@ h3.report__title
   margin-bottom: 25px
   text-align: center
   font-size: 26px
+  +media-md 
+    margin-bottom: 10px
+  +media-sm 
+    font-size: 24px
   
 .report__subtitle
   margin: 0
   margin-bottom: 60px
   text-align: center
   font-size: 20px
+  +media-md 
+    margin-bottom: 40px
 
 .report__subtitle-mark
   font-weight: 500
@@ -22,9 +28,15 @@ h3.report__title
   padding: 0 20px
   margin: 0 auto
   margin-bottom: 40px
+  +media-lg 
+    overflow-x: scroll
+  +media-sm 
+    margin-bottom: 30px
 
 .report__img 
   width: 100%
+  +media-lg 
+    width: 1160px
 
 .report__btn
   text-align: center
