--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -15,16 +15,28 @@ body
   color: #fff
 
 h2 
+  position: relative
+  z-index: 10
   font-size: 45px
   line-height: 1.3
   font-weight: 800
   text-transform: uppercase
+  +media-md 
+    font-size: 35px
+  +media-sm 
+    font-size: 30px
 
 h3
+  position: relative
+  z-index: 10
   font-size: 40px
   line-height: 1.37
   font-weight: 800
   text-transform: uppercase
+  +media-md 
+    font-size: 33px
+  +media-sm 
+    font-size: 25px
   
 
 .container
