--- a/app/sass/abstracts/_variables.sass
+++ b/app/sass/abstracts/_variables.sass
@@ -2,4 +2,5 @@ $font-main: 'Gotham Pro', 'Arial', sans-serif
 $color-green: #01c722
 $color-orange: #fd6327
 $color-blue: #1879e6
-$color-pink: #ff1a9b
+$color-pink: #c21aff
+// $color-pink: #ff1a9b
