--- a/app/sass/components/_btn.sass
+++ b/app/sass/components/_btn.sass
@@ -6,3 +6,10 @@
   font-weight: 500
   color: $color-green
   background-color: transparent
+  transition: .2s
+  cursor: pointer
+  &:hover,
+  &:focus 
+    box-shadow: 0 0.5em 0.5em -0.4em $color-green
+    transform: translateY(-0.25em)
+  
