--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -1,4 +1,5 @@
 .header 
+  position: relative
   padding-top: 140px
   padding-bottom: 120px
   background: url('../img/header-bg-gamepad.png') no-repeat top 470px left 0, url('../img/header-bg-hookah.png') no-repeat top 130px right 0, url('../img/header-bg.jpg') no-repeat center 
@@ -99,3 +100,5 @@
   +media-sm
     font-size: 31px
   
+// ---------------------------------
+
